--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Ignore everything
-*
-
-# But don't ignore the specific folder
-!dist/
-
-# Don't ignore anything inside the folder
-!dist/**
+node_modules/
+dist/
+.vscode/
