Added Mock-Terminal with *some* basic controls
NOT MY CODE, wanted proof of concept of it working so claude did all the heavy lifting, will be playing around with it in future and making it my own, commiting here in case I need something working to fall back to,

added Jquerey Terminal with CDN loading becuase vite was NOT working well with it

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "baffle": "^0.3.6",
-    "gsap": "^3.12.5",
+    "gsap": "^3.13.0",
+    "jquery": "^3.7.1",
     "three": "^0.167.1"
   },
   "devDependencies": {
